[gd_scene load_steps=11 format=3 uid="uid://dwqjg8ir1otcg"]

[ext_resource type="Script" path="res://code/thePlayerOfTheGameThatIsBeingPlayed.gd" id="1_xbier"]
[ext_resource type="Script" path="res://code/hud.gd" id="2_tqpvl"]
[ext_resource type="PackedScene" uid="uid://b8ba1x8mt4xds" path="res://etc/Interact/interact_ray.tscn" id="2_yf8uk"]
[ext_resource type="Texture2D" uid="uid://c0dwpc5oq6uxf" path="res://images/hud/hud.png" id="3_i0ifh"]
[ext_resource type="Texture2D" uid="uid://dr0spm2ixta6w" path="res://images/hud/weapons/gun.png" id="5_ry05e"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7n8ny"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jl75g"]
texture = ExtResource("3_i0ifh")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="SystemFont" id="SystemFont_6yqbr"]
font_names = PackedStringArray("American Typewriter")

[sub_resource type="SystemFont" id="SystemFont_anj2f"]
font_names = PackedStringArray("American Typewriter")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3lo7i"]
texture = ExtResource("3_i0ifh")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_xbier")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="Camera3D"]
omni_range = 182.099

[node name="hand" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -0.7)

[node name="InteractRay" parent="Camera3D" instance=ExtResource("2_yf8uk")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7n8ny")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -126.0
offset_right = -51.0
offset_bottom = -43.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("2_tqpvl")

[node name="panel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jl75g")

[node name="Ammo" type="HBoxContainer" parent="HUD/panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -29.0
offset_right = 47.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ClipAmmo" type="Label" parent="HUD/panel/Ammo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.721569, 0.721569, 0.721569, 1)
theme_override_fonts/font = SubResource("SystemFont_6yqbr")
theme_override_font_sizes/font_size = 42
text = "30"

[node name="TotalAmmo" type="Label" parent="HUD/panel/Ammo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.603922, 0.603922, 0.603922, 1)
theme_override_fonts/font = SubResource("SystemFont_anj2f")
theme_override_font_sizes/font_size = 24
text = "150"

[node name="panel2" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -268.0
offset_top = -82.0
offset_right = -157.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_3lo7i")

[node name="weapon" type="TextureRect" parent="HUD/panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -50.0
offset_right = 207.5
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_ry05e")
